implemented conditional rendering concepts

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Practical react essentials</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="start"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
